Fixed search dropdown not showing up in hamburger menu, added some comments to react code, added parkingarea table, moved parking area stuff into its own route/controller files, got parking area get request working

--- a/src/client/components/app.css
+++ b/src/client/components/app.css
@@ -78,3 +78,8 @@
   display: none;
   background: rgba(0, 0, 0, 0.3);
 }
+
+/*To make sure the google maps dropdown shows up, even in the hamburger menu*/
+.pac-container {
+	z-index: 10000000 !important;
+}
